# stereo-sgm-opencl

./: .clang-format  CMakeLists.txt  CMakeRC.cmake  README.md  sgm-cl-test.cpp  sgm-program.cl  sgm-test.cpp  sgm-vulkan-test.cpp  sgm_ocl_test.cpp  stereo-sgm.cpp  stereo-sgm.h
cmake/: libsgm_ocl-config.cmake.in
examples/: stereo_movie.cpp
libsgm_ocl/: libsgm_ocl.h  sgm.cl  types.h
sgm-cl/: CMakeLists.txt  sgm-cl.cl  sgm-cl.cpp
sgm-cl/cmake/: sgm-cl-config.cmake.in
sgm-cl/sgm-cl/: sgm-cl.h  sgm.cl
sgm-vulkan/: CMakeLists.txt  sgm-vulkan.cpp  sgm-vulkan.h
src/: census_transform.hpp  device_buffer.hpp  device_kernel.h  libsgm_ocl.cpp  path_aggregation.cpp  path_aggregation.h  sgm.cpp  sgm.hpp  sgm_details.cpp  sgm_details.h  types.hpp  winner_takes_all.cpp  winner_takes_all.hpp
src/ocl/: census.cl  check_consistency.cl  correct_disparity_range.cl  inttypes.cl  median_filter.cl  path_aggregation_common.cl  path_aggregation_horizontal.cl  path_aggregation_oblique.cl  path_aggregation_vertical.cl  utility.cl  winner_takes_all.cl
